# Englamer

./: CMakeLists.txt  CNAME  README.md
Demo/: Player.cpp  Player.h  Scene1.cpp  Scene1.h  SceneLight.cpp  SceneLight.h  main.cpp
Englamer/Components/: Collider.cpp  Collider.h  Component.cpp  Component.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  Transform.cpp  Transform.h
Englamer/Core/: Camera.cpp  Camera.h  Config.cpp  Config.h  Core.cpp  Core.h  Display.cpp  Display.h  Input.cpp  Input.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
Englamer/Data/: settings.ini
Englamer/Data/Settings/: settings.ini
Englamer/Data/Shaders/: debug_shader.fs  debug_shader.vs  shader.fs  shader.vs  skybox_shader.vs
Englamer/Entities/: Collider.cpp  Collider.h  Component.cpp  Component.h  Entity.cpp  Entity.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Transform.cpp  Transform.h
Englamer/Maths/: Intersect.cpp  Intersect.h  Vectorx.h  Vectorxoperators.h
Englamer/Scene/: Scenemanager.cpp  Scenemanager.h  Skybox.cpp  Skybox.h  Superscene.cpp  Superscene.h
Englamer/Utils/: Frustum.cpp  Frustum.h  Objloader.h  Resourcemanager.cpp  Resourcemanager.h  Textureloader.h  Time.cpp  Time.h
